--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <h1>เป็นอะไรดีน๊าาา ?</h1>
 <p>แมว // คน</p>
+
 <div>Teachable Machine Image Model</div>
 <button type="button" onclick="init()">Start</button>
 <div id="webcam-container"></div>
@@ -18,7 +19,7 @@
     // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
 
     // the link to your model provided by Teachable Machine export panel
-    const URL = "./my_model/";
+    const URL = "https://teachablemachine.withgoogle.com/models/l2USCRdK0/";
 
     let model, webcam, labelContainer, maxPredictions;
 
